--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,7 @@
     "require-dev": {
         "fakerphp/faker": "^1.23",
         "larastan/larastan": "^3.8",
+        "laravel/boost": "^1.8",
         "laravel/pail": "^1.2.2",
         "laravel/pint": "^1.24",
         "laravel/sail": "^1.41",
@@ -67,7 +68,7 @@
         "polish": [
             "@php artisan config:clear --ansi",
             "pint",
-            "vendor/bin/phpstan analyse",
+            "vendor/bin/phpstan analysecom",
             "@php artisan test",
             "npx playwright test"
         ],
