--- a/composer.json
+++ b/composer.json
@@ -68,7 +68,7 @@
         "polish": [
             "@php artisan config:clear --ansi",
             "pint",
-            "vendor/bin/phpstan analysecom",
+            "vendor/bin/phpstan analyse",
             "@php artisan test",
             "npx playwright test"
         ],
